apps/home-assistant/middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: strip-home-assistant
  namespace: default
spec:
  stripPrefix:
    prefixes:
      - /home-assistant
